# agentbox

./: .gitignore  README.md  agent-containers.toml  agentbox.toml  pyproject.toml
.agentbox/: codex.Containerfile  kilo.Containerfile
.agentbox/kilo/: Containerfile  kilo.jsonc
.kilo/plans/: 1783960616424-kilo-config-support-plan.md  1783967202944-kilo-sandbox-policy-per-run-state-plan.md  1783991696001-harness-containerfile-directories.md  1784024017685-template-resources-importlib-plan.md  1784101821742-per-run-kilo-cache.md
.tasks/kilo-support/: proposal.md
src/agent_containers/: cli.py  config.py  devcontainer.py  gitops.py  podman.py  runs.py
src/agentbox/: cli.py  config.py  devcontainer.py  drivers.py  gitops.py  podman.py  runs.py  template.py
src/agentbox/drivers/: __init__.py  base.py  codex.py  kilo.py
src/agentbox/templates/: agentbox.toml
src/agentbox/templates/codex/: Containerfile  agentbox-section.toml
src/agentbox/templates/kilo/: Containerfile  agentbox-section.toml
tests/: helpers.py  test_cli.py  test_config.py  test_devcontainer.py  test_drivers.py  test_gitops.py  test_podman.py  test_runs.py  test_templates.py
