[project]
name = "agentbox"
version = "0.1.0"
description = "Run AI coding agents inside rootless Podman containers."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agentbox = "agentbox.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

